grammar.js
        program: $ => prec(1, seq(
            optional($.weave_body),
            repeat(
                choice(
                    $.knot,
                    $.function
                )
            )
        )),

        weave_body: $ => prec.right(repeat1(
            choice(
                $.weave_body_line,
                $.var_line,
                $.const_line,
                $.list_line,
                $.include_line,
                $.external_line,
                $.todo_line,
                $.empty_line
            )
        )),
        weave_body_line: $ => seq(
            $.line_start,
            optional(choice(
                $.option_text,
                $.code_text,
                $.dialog_text,
                $.gather_text,
            )),
            $.line_end
        ),

        option_text: $ => seq(
            field("marker", $.choice_marker),
            optional(choice(
                seq(
                    field("label", $.label),
                    optional($.choice_label_continuation),
                    repeat(seq(
                        field("condition", $.choice_condition),
                        optional($.choice_condition_continuation),
                    )),
                ),
                repeat1(seq(
                    field("condition", $.choice_condition),
                    optional($.choice_condition_continuation),
                )),
            )),
            optional(field("content", $.choice_content)),
            optional(field("target", choice($.divert_or_thread, $.default_option_mark))),
        ),
        choice_marker: $ => choice(
            $.once_choice_marker,
            $.sticky_choice_marker,
        ),
        once_choice_marker: $ => repeat1(/\*/),
        sticky_choice_marker: $ => repeat1(/\+/),
        choice_condition: $ => prec.dynamic(3, seq(/\{/, field("condition", $.expression), /\}/)),
        choice_content: $ => choice(
            field("shared", $.shared_choice_text),
            seq(
                optional(field("shared", $.shared_choice_text)),
                $.hide_start,
                optional(field("choice_only", $.choice_text)),
                $.hide_end,
                optional(field("output_only", $.choice_text)),
            ),
        ),
        shared_choice_text: $ => seq(
            choice(
                $.escaped_character,
                $.glue,
                $.tag,
                $.vocabulary,
                $.shared_choice_text_other,
            ),
            repeat(choice(
                $.escaped_character,
                $.glue,
                $.inline_block,
                $.tag,
                $.vocabulary,
                $.choice_text_other,
            )),
        ),
        choice_text: $ => repeat1(choice(
            $.escaped_character,
            $.glue,
            $.inline_block,
            $.tag,
            $.vocabulary,
            $.choice_text_other,
        )),
        choice_text_other: $ => prec.right(repeat1(/[^\s\\\n\r\p{N}\p{L}\[\]_#]/)),
        divert_or_thread: $ => choice(
            $.divert_chain,
            $.thread
        ),

        label: $ => prec.dynamic(3, seq(
            /\(/,
            $.identifier,
            /\)/
        )),

        code_text: $ => seq(
            /~/,
            choice(
                $.return_statement,
                $.temporary_declaration,
                $.assignment_statement,
                $.mutation_statement,
                $.call_statement,
                $.invalid_logic_statement,
            ),
        ),

        var_line: $ => seq(
            $.var_start,
            field("name", $.identifier),
            field("operator", $.assignment),
            field("value", $.expression),
            $.line_end
        ),
        dialog_text: $ => choice(
            $.condition_text,
            $.text,
            $.divert_or_thread,
            repeat1($.tag),
            seq($.text, $.divert_or_thread),
            seq($.text, repeat1($.tag))
        ),
        text: $ => repeat1(choice(
            $.escaped_character,
            $.glue,
            $.inline_block,
            $.vocabulary,
            $.other,
        )),

        hide_start: $ => /\[/,
        hide_end: $ => /\]/,

        divert_chain: $ => choice(
            $.divert_return,
            seq(
                repeat1(
                    $.divert
                ),
                optional($.divert_continue),
                optional($.divert_return)
            )
        ),
        divert: $ => seq(
            $.arrow,
            field("target", choice($.end_destination, $.done_destination, $.identifier_path)),
            optional(field("arguments", $.call_arguments)),
        ),
        call_arguments: $ => seq(
            /\(/,
            optional(seq(
                $.call_argument,
                repeat(seq(
                    /,/,
                    $.call_argument,
                )),
                optional(/,/),
            )),
            /\)/,
        ),
        call_argument: $ => choice(
            $.expression,
        ),

        return_statement: $ => seq(
            /return/,
            optional(field("value", $.expression)),
        ),
        temporary_declaration: $ => seq(
            /temp/,
            field("name", $.identifier),
            optional(seq(
                field("operator", $.assignment),
                field("value", $.expression),
            )),
        ),
        assignment_statement: $ => seq(
            field("target", $.identifier),
            field("operator", choice($.assignment, $.compound_assignment)),
            field("value", $.expression),
        ),
        mutation_statement: $ => seq(
            field("target", $.identifier),
            field("operator", $.mutation_operator),
        ),
        condition_text: $ => seq(
            $.condition_block,
            optional($.text)
        ),

        condition_block: $ => choice(
            $.multiline_sequence,
            $.multiline_switch,
            $.multiline_if,
            $.multiline_conditional,
        ),
        multiline_if: $ => seq(
            $.block_brace_start,
            field("condition", $.expression),
            /:/,
            $.line_end,
            optional(field("consequence", $.block_body)),
            optional(field("alternative", $.else_branch)),
            $.line_start,
            /\}/,
        ),
        block_body: $ => repeat1($.block_statement),
        block_statement: $ => choice(
            $.nested_block_statement,
            $.block_statement_line,
            $.var_line,
            $.const_line,
            $.list_line,
            $.include_line,
            $.external_line,
            $.todo_line,
            $.empty_line,
        ),
        block_statement_line: $ => seq(
            $.line_start,
            optional($.block_line_content),
            $.line_end,
        ),
        block_line_content: $ => choice(
            $.option_text,
            $.code_text,
            $.dialog_text,
        ),

        inline_block: $ => choice(
            $.inline_conditional,
            $.inline_sequence,
            $.inline_expression,
        ),
        inline_expression: $ => prec(3, seq(
            $.inline_expression_start,
            field("value", $.expression),
            /\}/,
        )),
        inline_conditional: $ => prec(4, seq(
            $.inline_conditional_start,
            field("condition", $.expression),
            /:/,
            field("consequence", optional($.inline_content)),
            optional(seq(/\|/, field("alternative", optional($.inline_content)))),
            /\}/,
        )),
        inline_sequence: $ => prec(2, seq(
            $.inline_sequence_start,
            optional(field("annotation", $.sequence_annotation)),
            optional(field("alternative", $.sequence_content)),
            repeat1(seq(
                $.sequence_separator,
                optional(field("alternative", $.sequence_content)),
            )),
            /\}/,
        )),
        sequence_annotation: $ => choice(/&/, /!/, /~/, /\$/, /~!/, /!~/, /~\$/, /\$~/),
        sequence_separator: $ => /\|/,
        sequence_content: $ => repeat1(choice(
            $.escaped_character,
            $.glue,
            $.inline_block,
            $.divert_or_thread,
            $.vocabulary,
            $.inline_text_other,
        )),
        inline_content: $ => repeat1(choice(
            $.escaped_character,
            $.glue,
            $.inline_block,
            $.divert_or_thread,
            $.tag,
            $.vocabulary,
            $.inline_text_other,
        )),
        identifier_path: $ => seq(
            $.identifier,
            optional(repeat1(seq(
                $.dot,
                $.identifier
            )))
        ),

        tag: $ => seq(
            /#/,
            repeat1(choice(
                $.escaped_character,
                $.inline_block,
                $.tag_text,
            )),
        ),
        tag_text: $ => /[^#\\\{\}\[\]\r\n]+/,

        expression: $ => choice(
            $.binary_expression,
            $.unary_expression,
            $.postfix_expression,
            $.call_expression,
            $.divert_target_value,
            $.list_value,
            $.parenthesized_expression,
            $.reference,
            $.boolean,
            $.string,
            $.float,
            $.number,
        ),
        binary_expression: $ => choice(
            ...[
                [PREC.LOGICAL, choice(/&&/, /\|\|/, $.and_operator, $.or_operator)],
                [PREC.COMPARISON, choice(/==/, /!=/, /<=/, />=/, /</, />/)],
                [PREC.CONTAINMENT, choice(/!\?/, /\?/, /\^/, $.has_operator, $.hasnt_operator)],
                [PREC.ADD, /\+/],
                [PREC.SUBTRACT, /-/],
                [PREC.MULTIPLY, /\*/],
                [PREC.DIVIDE, /\//],
                [PREC.MODULO, choice(/%/, $.mod_operator)],
            ].map(([precedence, operator]) => prec.left(precedence, seq(
                field("left", $.expression),
                field("operator", operator),
                field("right", $.expression),
            ))),
        ),
        unary_expression: $ => prec.right(PREC.UNARY, seq(
            field("operator", choice(/-/, /!/, $.not_operator)),
            field("argument", $.expression),
        )),
        call_expression: $ => prec(PREC.CALL, seq(
            field("function", $.identifier),
            field("arguments", $.call_arguments),
        )),
        divert_target_value: $ => seq(
            $.arrow,
            field("target", choice($.end_destination, $.done_destination, $.identifier_path)),
        ),
        end_destination: $ => /END/,
        done_destination: $ => /DONE/,
        reference: $ => $.identifier_path,
        list_value: $ => seq(
            /\(/,
            optional(seq(
                field("item", $.identifier_path),
                repeat(seq(
                    /,/,
                    field("item", $.identifier_path),
                )),
            )),
            /\)/,
        ),
        boolean: $ => /(true|false)/,
        escaped_character: $ => seq(
            /\\/,
            alias(token.immediate(/[^\r\n]/), $.escaped_value),
        ),

        or_operator: $ => token(/or[ \t]+/),
        not_operator: $ => token(/not[ \t]+/),
        number: $ => /\d+/,
        float: $ => token(prec(1, /\d+\.\d*/)),
        assignment: $ => /=/,
        compound_assignment: $ => /(\+=|-=)/,
        mutation_operator: $ => /(\+\+|--)/,
        dot: $ => /\./,
        vocabulary: $ => /[\p{N}\p{L}_-]+/,
        identifier: $ => token(new RegExp(`${ID_CHAR}*${ID_NON_DIGIT}${ID_CHAR}*`, "u")),
        // Single character catch-all in the form /[]+/ would be to
        // greedy, these are meant to catch punctionation. Therefore we use
        // prec.right(repeat1(/[]/)).
